improved projects scheduler (#111)
Co-authored-by: openmike <muxaujish@gmail.com>